[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/components/SituationCard.gd" type="Script" id=1]
[ext_resource path="res://scenes/basic/Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/basic/Label.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/basic/Button.tscn" type="PackedScene" id=4]

[node name="SituationCard" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -187.0
margin_top = -109.0
margin_right = 188.0
margin_bottom = 84.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SituationConsequence" parent="." instance=ExtResource( 3 )]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -1.5
margin_right = 0.0
margin_bottom = 43.5
text = "Pomičeš se za N polja naprijed/natrag."

[node name="SituationText" parent="." instance=ExtResource( 2 )]
anchor_right = 1.0
margin_right = 0.0
margin_bottom = 93.0
text = "Tekst situacije."
align = 1
valign = 1

[node name="Button" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -45.0
margin_top = -41.0
margin_right = 45.0
margin_bottom = -5.0
text = "Prihvati"
[connection signal="button_up" from="Button" to="." method="_on_Button_pressed"]
